Fix constellation button overlap mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2149,6 +2149,8 @@ main {
 
         z-index:10;
 
+        padding-bottom: 300px;
+
     }
 
 
